--- a/workspaces/web/index.html
+++ b/workspaces/web/index.html
@@ -40,6 +40,7 @@ and open the template in the editor.
     </label>
   </div>
   <button type="submit" class="btn btn-default">Submit</button>
+  <button type="button" onclick="  " >Demo</button>
 </form>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
