--- a/workspaces/web/html/chat.html
+++ b/workspaces/web/html/chat.html
@@ -1,8 +1,8 @@
-<link href="css/bootstrap.min.css" rel="stylesheet">
-<link href="css/chat.css" rel="stylesheet">
 
 
-<div class="container">
+
+
+<div class="container chat">
     <div class="row chat-window col-xs-5 col-md-3" id="chat_window_1" style="margin-left:10px;">
         <div class="col-xs-12 col-md-12">
         	<div class="panel panel-default">
@@ -114,7 +114,4 @@
             <li><a href="#"><span class="glyphicon glyphicon-eye-close"></span> Invisivel</a></li>
         </ul>
     </div>
-    
-    <script src="js/chat.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+   
