--- a/workspaces/web/html/portal.html
+++ b/workspaces/web/html/portal.html
@@ -13,6 +13,7 @@ and open the template in the editor.
         <!-- Bootstrap -->
         <link href="../css/bootstrap.min.css" rel="stylesheet">
         <link href="../css/custom.css" rel="stylesheet">
+        <link href="../css/chat.css" rel="stylesheet">
         <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
         <!-- Include all compiled plugins (below), or include individual files as needed -->
@@ -20,6 +21,7 @@ and open the template in the editor.
         <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.26/angular.min.js"></script>
         <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.1/angular-route.min.js"></script>
         <script src="../js/app.js"></script>
+        <script src="../js/chat.js"></script>
 
         <!--<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.0.3/angular-sanitize.js"></script>-->
 
@@ -45,18 +47,10 @@ and open the template in the editor.
 
             <div class="row">
                 <div ng-hide="mustHide"  class="col-sm-5 col-sm-offset-1" ng-bind-html="angularOutput"></div>
-            </div>
+                <div ng-hide="groupsHide"  class="col-sm-5 col-sm-offset-1" ng-bind-html="groupOutput"></div>
+                <div ng-hide="chatHide"  class="" ng-bind-html="chatOutput"></div>
+             </div>
         </div>
-
-        <script>
-
-                    function personController($scope, $http, $sce) {
-                        
-                    }
-
-        </script>
-
-
 
     </body>
 </html>
