--- a/workspaces/web/html/portal.html
+++ b/workspaces/web/html/portal.html
@@ -54,10 +54,11 @@ and open the template in the editor.
 
 
             <div class="row workspaceWindow">
-                <div ng-hide="mustHide"  class="col-sm-5 col-sm-offset-1" ng-bind-html="angularOutput"></div>
-                <div ng-hide="groupsHide"  class="col-sm-5 col-sm-offset-1" ng-bind-html="groupOutput"></div>
+                <div ng-hide="mustHide"  class="col-sm-6 col-sm-offset-1" ng-bind-html="angularOutput"></div>
+                <div ng-hide="groupsHide"  class="col-sm-6 col-sm-offset-1" ng-bind-html="groupOutput"></div>
                 <div ng-hide="chatHide"  class="" ng-bind-html="chatOutput"></div>
-                <div ng-hide="todoHide"  class="col-sm-5 col-sm-offset-1" ng-bind-html="todoOutput"></div>
+                <div ng-hide="todoHide"  class="col-sm-6 col-sm-offset-1" ng-bind-html="todoOutput"></div>
+                <div ng-hide="assignmentHide"  class="col-sm-6 col-sm-offset-1" ng-bind-html="assignmentOutput"></div>
                 <div  id='calendar' ng-hide="calendarHide" class="col-xs-12 col-sm-6 col-sm-offset-1"></div>
 
 
