Fixed Login to dispatch and forward request to portal.jsp

--- a/workspaces/web/index.html
+++ b/workspaces/web/index.html
@@ -21,14 +21,14 @@ and open the template in the editor.
   </head>
   <body>
     <div class="wrapper">
-    <form class="form-signin">       
+    <form class="form-signin" action="Login">       
       <h2 class="text-center form-signin-heading">Workspaces</h2>
       <input type="text" class="form-control" name="username" placeholder="Email Address" required="" autofocus="" />
       <input type="password" class="form-control" name="password" placeholder="Password" required=""/>      
       <label class="checkbox">
         <input type="checkbox" value="remember-me" id="rememberMe" name="rememberMe"> Remember me
       </label>
-      <button class="btn btn-lg btn-primary btn-block" type="submit"><a href="html/portal.html">Login</a></button>   
+      <button class="btn btn-lg btn-primary btn-block" type="submit">Login</button>   
     </form>
   </div>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
